[package]
name = "date-tai"
version = "0.1.0"
authors = ["Adrien Thebo <adrien@lagrange-automation.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time-sys = "0.0.2"
linux-api = "0.0.5"
errno = "0.2.4"
chrono = "0.4"
futures = "0.1"
hurdles = "1.0"
